slider text is bigger and slider 3 no longer has alignment issues at desktop size

--- a/styles_index.css
+++ b/styles_index.css
@@ -191,8 +191,8 @@ body {
   margin-top: -22px;
   color: gold;
   font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
+  font-size: 60px;
+  transition: 0.3s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
@@ -217,14 +217,19 @@ body {
 .text {
   background-color: rgba(255, 255, 255, 0.1);
   color: aqua;
-  font-size: 20px;
-  padding: 8px 12px;
+  font-size: 30px;
+  padding: 10px 20px 30px;
   position: absolute;
-  bottom: 8px;
-  width: 60%;
+  bottom: 10px;
+  /* width: 100%; */
   font-family: 'Open Sans', sans-serif;  
   text-align: center;
-  margin: -100px;
+  margin: -130px; 
+  height: 110px;
+  width: 1000px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  
 }
 
 .mySlides-1 {  
